removed icons from services-list, fix for nav on mobile beeing to large

--- a/app/styles/landingpage/services.scss
+++ b/app/styles/landingpage/services.scss
@@ -4,50 +4,34 @@
 }
 
 .sy-services__item {
-    display: block;
-    margin: 0;
+  display: block;
+  margin: 0;
 
-    background-repeat: no-repeat;
-    background-size: auto auto;
-    margin-bottom: 20px;
+  background-repeat: no-repeat;
+  background-size: auto auto;
+  margin-bottom: 20px;
+
+  @include media-breakpoint-up(md) {
+    width: 90%;
+    &:nth-child(odd) {
+      margin-right: 10%;
+    }
+
+    &:nth-child(even) {
+      margin-left: 10%;
+      text-align: right;
+    }
+  }
+
+  @include media-breakpoint-down(sm) {
 
     &:nth-child(odd) {
     }
 
     &:nth-child(even) {
-      text-align: right;
+      text-align: left;
     }
-
-    @include media-breakpoint-up(md) {
-      width: 50%;
-      &:nth-child(odd) {
-        margin-right: 50%;
-      }
-
-      &:nth-child(even) {
-        margin-left: 50%;
-      }
-    }
-
-    @include media-breakpoint-down(sm) {
-      margin-left: -$page-padding;
-      margin-right: -$page-padding;
-      padding-left: 20px;
-      padding-right: 20px;
-
-      &:nth-child(odd) {
-        background-image: url("../assets/images/service-arrow.svg");
-        background-position: right center;
-        padding-right: 20%;
-      }
-
-      &:nth-child(even) {
-        background-image: url("../assets/images/service-arrow-left.svg");
-        background-position: left center;
-        text-align: right;
-        padding-left: 20%;
-      }
-    }
+  }
 }
 
 
